--- a/WindowPositionRestorerForm/Nlog.config
+++ b/WindowPositionRestorerForm/Nlog.config
@@ -8,7 +8,7 @@
 	</targets>
 
 	<rules>
-		<logger name="*" minlevel="Trace" writeTo="logDev" />
-		<logger name="*" minlevel="Trace" writeTo="logfile" />
+		<logger name="*" minlevel="Debug" writeTo="logDev" />
+		<logger name="*" minlevel="Debug" writeTo="logfile" />
 	</rules>
 </nlog>
