--- a/WindowPositionRestorerForm/WindowPositionRestorerForm.csproj
+++ b/WindowPositionRestorerForm/WindowPositionRestorerForm.csproj
@@ -9,6 +9,10 @@
     <PublishTrimmed>true</PublishTrimmed>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="NLog" Version="4.7.9" />
   </ItemGroup>
