--- a/WindowPositionRestorerForm/WindowPositionRestorerForm.csproj
+++ b/WindowPositionRestorerForm/WindowPositionRestorerForm.csproj
@@ -13,6 +13,10 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="NLog" Version="4.7.9" />
   </ItemGroup>
